--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "tellin",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "a static site generator",
   "main": "./lib/tellin.js",
+  "bin": {
+    "tellin": "./bin/tellin"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,6 +26,12 @@
   },
   "homepage": "https://github.com/ArthusLiang/tellin#readme",
   "dependencies": {
+    "ejs": "^2.4.1",
+    "highlight.js": "^9.3.0",
+    "js-yaml": "^3.6.0",
+    "marked": "^0.3.5"
+  },
+  "devDependencies":{
     "ejs": "^2.4.1",
     "highlight.js": "^9.3.0",
     "js-yaml": "^3.6.0",
